--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Your awesome title
+title: sistemas e sites 
 author:
-  name: GitHub User
-  email: your-email@domain.com
+  name: ss 
+  email: alves_zecarlos@hotmail.com
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
@@ -12,7 +12,7 @@ description: >
 
 # Build settings
 
-theme: minima
+theme: sitemas
 
 plugins:
   - jekyll-feed
@@ -31,11 +31,11 @@ minima:
   # social_links:
   #   - { platform: devto,          user_url: "https://dev.to/jekyll" }
   #   - { platform: dribbble,       user_url: "https://dribbble.com/jekyll" }
-  #   - { platform: facebook,       user_url: "https://www.facebook.com/jekyll" }
+     - { platform: facebook,       user_url: "https://www.facebook.com/@alveszecarlos" }
   #   - { platform: flickr,         user_url: "https://www.flickr.com/photos/jekyll" }
-  #   - { platform: github,         user_url: "https://github.com/jekyll/minima" }
+      - { platform: github,         user_url: "https://github.com/alves_zecarlos@hotmail" }
   #   - { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=qc6CJjYAAAAJ" }
-  #   - { platform: instagram,      user_url: "https://www.instagram.com/jekyll" }
+      - { platform: instagram,      user_url: "https://www.instagram.com/@alvesjosecarlos" }
   #   - { platform: keybase,        user_url: "https://keybase.io/jekyll" }
   #   - { platform: linkedin,       user_url: "https://www.linkedin.com/in/jekyll" }
   #   - { platform: microdotblog,   user_url: "https://micro.blog/jekyll" }
