--- a/_config.yml
+++ b/_config.yml
@@ -28,10 +28,10 @@ minima:
 
   # Generate social links in footer.
   #
-  # social_links:
+    social_links:
   #   - { platform: devto,          user_url: "https://dev.to/jekyll" }
   #   - { platform: dribbble,       user_url: "https://dribbble.com/jekyll" }
-     - { platform: facebook,       user_url: "https://www.facebook.com/@alveszecarlos" }
+      - { platform: facebook,       user_url: "https://www.facebook.com/@alveszecarlos" }
   #   - { platform: flickr,         user_url: "https://www.flickr.com/photos/jekyll" }
       - { platform: github,         user_url: "https://github.com/alves_zecarlos@hotmail" }
   #   - { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=qc6CJjYAAAAJ" }
